--- a/dapr/Components/pubsub.yaml
+++ b/dapr/Components/pubsub.yaml
@@ -8,7 +8,7 @@ spec:
   version: v1
   metadata:
   - name: url
-    value: "tcp://192.168.1.2:1883"
+    value: "tcp://localhost:1883"
   - name: qos
     value: 1
   - name: retain
